cczoo/tensorflow-serving-cluster/tensorflow-serving/kubernetes/deploy.yaml
# Copyright 2021 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

apiVersion: v1
kind: Namespace
metadata:
  name: gramine-tf-serving

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: gramine-tf-serving-service
  name: gramine-tf-serving-service
  namespace: gramine-tf-serving
spec:
  type: NodePort # LoadBalancer ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 8500
    targetPort: 8500
    nodePort: 30500
  selector:
    app: gramine-tf-serving-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramine-tf-serving-deployment
  namespace: gramine-tf-serving
spec:
  selector:
    matchLabels:
      app: gramine-tf-serving-app
  replicas: 1
  template:
    metadata:
      labels:
        app: gramine-tf-serving-app
    spec:
      containers:
      - name: gramine-tf-serving-container
        image: localhost:5000/tensorflow_serving:<Your tensorflow_serving tag>
        imagePullPolicy: Always
        ports:
        - name: grpc
          containerPort: 8500
        volumeMounts:
        - name: sgx-path
          mountPath: /dev/sgx
        - name: model-path
          mountPath: /gramine/CI-Examples/tensorflow-serving-cluster/tensorflow-serving/models
        - name: ssl-path
          mountPath: /gramine/CI-Examples/tensorflow-serving-cluster/tensorflow-serving/ssl.cfg
        - name: aesm-path
          mountPath: /var/run/aesmd/aesm.socket
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "2"
      volumes:
      - name: sgx-path
        hostPath:
          path: /dev/sgx
      - name: model-path
        hostPath:
          path: <Your confidential-computing-zoo path>/cczoo/tensorflow-serving-cluster/tensorflow-serving/docker/tf_serving/models
      - name: ssl-path
        hostPath:
          path: <Your confidential-computing-zoo path>/cczoo/tensorflow-serving-cluster/tensorflow-serving/docker/tf_serving/ssl_configure/ssl.cfg
      - name: aesm-path
        hostPath:
          path: /var/run/aesmd/aesm.socket
