cczoo/tensorflow-serving-cluster/tensorflow-serving/kubernetes/deploy_for_aks.yaml
# Copyright 2021 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

apiVersion: v1
kind: Namespace
metadata:
  name: gramine-tf-serving

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: gramine-tf-serving-service
  name: gramine-tf-serving-service
  namespace: gramine-tf-serving
spec:
  type: LoadBalancer # NodePort ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 8500
    targetPort: 8500
  selector:
    app: gramine-tf-serving-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramine-tf-serving-deployment
  namespace: gramine-tf-serving
spec:
  selector:
    matchLabels:
      app: gramine-tf-serving-app
  replicas: 1
  template:
    metadata:
      labels:
        app: gramine-tf-serving-app
    spec:
      containers:
      - name: gramine-tf-serving-container
        image: <acrName>.azurecr.io/gramine_tf_serving:azure-latest
        imagePullPolicy: Always
        ports:
        - name: grpc
          containerPort: 8500
        volumeMounts:
        - name: sgx-path
          mountPath: /dev/sgx
        - name: azure
          mountPath: /gramine/CI-Examples/tensorflow-serving-cluster/tensorflow-serving/models/resnet50-v15-fp32/1/saved_model.pb
          subPath: saved_model.pb
        - name: azure
          mountPath: /gramine/CI-Examples/tensorflow-serving-cluster/tensorflow-serving/ssl.cfg
          subPath: ssl.cfg
        - name: var-run-aesmd
          mountPath: /var/run/aesmd
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "2"
      volumes:
      - name: azure
        csi:
          driver: file.csi.azure.com
          readOnly: false
          volumeAttributes:
            secretName: azure-secret
            shareName: <fileShareName>
            mountOptions: "dir_mode=0777,file_mode=0777,cache=strict,actimeo=30,nosharesock"
      - name: sgx-path
        hostPath:
          path: /dev/sgx
      - name: var-run-aesmd
        hostPath:
          path: /var/run/aesmd
